# qortex

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
qortex/: db.sqlite3  manage.py
qortex/api/: create_test_data.py  models.py  serializers.py  urls.py  views.py
qortex/api/migrations/: 0001_initial.py
qortex/qortex/: asgi.py  settings.py  urls.py  wsgi.py
